<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="e_g_50000">e.g. 50000</string>
    <string name="term_of_loan_years">Term of Loan (years)</string>
    <string name="e_g_7">e.g. 7</string>
    <string name="yearly_interest_rate">Yearly Interest Rate</string>
    <string name="e_g_7.5">e.g. 7.5</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="results">Results</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_interest">Total Interest</string>
</resources>
